<resources>
    <string name="app_name">Winnipeg Trails</string>
    <string name="settings">SETTINGS</string>
    <string name="gems">HIDDEN GEMS</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="mode">MODE</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="faq">FAQ</string>
    <string name="about">ABOUT THIS APP</string>
    <string name="manual">VIEW MANUAL</string>
    <string name="add">ADD GEM OR COMBO</string>
    <string name="prizes">DONATIONS/PRIZES</string>
    <string name="points">My Points</string>
    <string name="exit">X</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_email">enter an email</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">" and "</string>
    <string name="error_end">.</string>
    <string name="progress_signup">Signing you up!</string>
    <string name="progress_login">Logging you in!</string>
    <string name="progress_egg">Loading gem details!</string>
    <string name="progress_egg_list">Loading hidden gems!</string>
    <string name="progress_user_list">Loading leaderboard!</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="pick">PICK YOUR MODE</string>
    <string name="walk">WALK</string>
    <string name="skateboard">SKATEBOARD</string>
    <string name="bicycle">BICYCLE</string>
    <string name="wheelchair">WHEELCHAIR</string>
    <string name="skate">SKATE</string>
    <string name="ski">SKI</string>
    <string name="start">START</string>
    <string name="no_location_detected">Could not detect your location.</string>
    <string name="no_eggs_found">No gems are within range of you.</string>
    <string name="no_mode_selected">You must select a mode of transport.</string>
    <string name="found_gem">Well done. You found a hidden gem!</string>
    <string name="user_login">To save this gem, keep score and win prizes, you have to login.</string>
</resources>
