<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mode_view"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#ffffff"
    tools:context=".ModeActivity" >

    <ca.winnipegtrails.winnipegtrails.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/modes"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp" >

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skateboard"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bicycle"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheelchair"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skate"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />

        <ca.winnipegtrails.winnipegtrails.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ski"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="modeSelected" />
    </LinearLayout>

    <ca.winnipegtrails.winnipegtrails.CustomTextView
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:textStyle="bold" />
</LinearLayout>